feat: update badge tab labels for clarity and remove unnecessary whitespace

--- a/src/app/pages/badges/badges.component.html
+++ b/src/app/pages/badges/badges.component.html
@@ -46,7 +46,7 @@
         <mat-tab>
             <ng-template mat-tab-label>
                 <mat-icon class="tab-icon">military_tech</mat-icon>
-                Awarded
+                Received
             </ng-template>
             <div class="badges-grid">
                 @for (badge of received(); track badge.id) {
@@ -63,7 +63,7 @@
         <mat-tab>
             <ng-template mat-tab-label>
                 <mat-icon class="tab-icon">emoji_events</mat-icon>
-                Issued
+                Given
             </ng-template>
             <div class="badges-grid">
                 @for (badge of issued(); track badge.id) {
