--- a/src/app/pages/profile/profile-home/profile-home.component.html
+++ b/src/app/pages/profile/profile-home/profile-home.component.html
@@ -1,26 +1,13 @@
-<!-- <div class="tab-content">
-  <div class="empty-state">
-    <mat-icon>article</mat-icon>
-    <p>No posts to display yet</p>
-  </div>
-</div> -->
+<nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="true" mat-align-tabs="start">
+  @for (link of navLinks; track link.path) {
+  <a mat-tab-link [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive"
+    [queryParamsHandling]="'preserve'">
+    <mat-icon>{{ link.icon }}</mat-icon>
+    <span class="nav-link-text">{{ link.label }}</span>
+  </a>
+  }
+</nav>
 
-    <!-- Navigation tabs -->
-    <nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="true" mat-align-tabs="start">
-      @for (link of navLinks; track link.path) {
-        <a mat-tab-link
-           [routerLink]="link.path"
-           routerLinkActive
-           #rla="routerLinkActive"
-           [active]="rla.isActive"
-           [queryParamsHandling]="'preserve'">
-           <mat-icon>{{ link.icon }}</mat-icon>
-           <span class="nav-link-text">{{ link.label }}</span>
-        </a>
-      }
-    </nav>
-    
-    <mat-tab-nav-panel #tabPanel>
-      <!-- Router outlet for tab content -->
-      <router-outlet></router-outlet>
-    </mat-tab-nav-panel>
+<mat-tab-nav-panel #tabPanel>
+  <router-outlet></router-outlet>
+</mat-tab-nav-panel>
