feat: add bookmark functionality with toggle feature and update profile notes layout

--- a/src/app/pages/profile/profile-notes/profile-notes.component.scss
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.scss
@@ -61,3 +61,11 @@
 .date-link:hover {
   text-decoration: underline;
 }
+
+.note-footer {
+  display: flex;
+}
+
+.note-footer-right {
+  margin-left: auto;
+}
