--- a/src/app/pages/profile/profile-notes/profile-notes.component.html
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.html
@@ -40,7 +40,17 @@
         </a>
       </app-user-profile>
       <mat-card-content>{{note.content}}</mat-card-content>
-    </mat-card>
+      <mat-card-footer class="note-footer">
+        <button mat-icon-button>
+          <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
+        </button>
+        <button mat-icon-button class="note-footer-right">
+          <mat-icon matTooltip="Reply" matTooltipPosition="below" (click)="bookmark.toggleBookmark(note.id)">
+            
+          </mat-icon>
+        </button>
+      </mat-card-footer>
+    </mat-card> 
     }
 
     <!-- <div class="note-items">
