--- a/src/app/pages/profile/profile-replies/profile-replies.component.scss
+++ b/src/app/pages/profile/profile-replies/profile-replies.component.scss
@@ -4,14 +4,15 @@
   position: relative;
 }
 
-.empty-state, .error-state {
+.empty-state,
+.error-state {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 200px;
   color: var(--mat-subtitle-text-color, rgba(0, 0, 0, 0.6));
-  
+
   mat-icon {
     font-size: 48px;
     height: 48px;
@@ -30,4 +31,41 @@
 
 .replies-list {
   margin-top: 1rem;
+}
+
+
+.note-card {
+  margin-bottom: 1rem;
+}
+
+.note-items {
+  border-top: 1px solid var(--mat-sys-outline);
+  border-left: 1px solid var(--mdc-outlined-card-outline-color, var(--mat-sys-outline-variant));
+  border-right: 1px solid var(--mdc-outlined-card-outline-color, var(--mat-sys-outline-variant));
+}
+
+.note-item {
+  border-bottom: 1px solid var(--mdc-outlined-card-outline-color, var(--mat-sys-outline-variant));
+  padding: 1rem;
+}
+
+.user-profile-thread {
+  padding: 0.4rem;
+}
+
+.date-link {
+  font-size: 0.8rem;
+  color: var(--mat-sys-outline);
+}
+
+.date-link:hover {
+  text-decoration: underline;
+}
+
+.note-footer {
+  display: flex;
+}
+
+.note-footer-right {
+  margin-left: auto;
 }
