--- a/src/app/pages/profile/profile-replies/profile-replies.component.html
+++ b/src/app/pages/profile/profile-replies/profile-replies.component.html
@@ -1,52 +1,57 @@
 <div class="tab-content">
-  <div class="options-section">
-    <h3 class="options-title">Display Options</h3>
-    <div class="option-controls">
-      <mat-slide-toggle 
-        [checked]="showLegacyReplies()" 
-        (change)="toggleLegacyReplies()"
-        color="primary">
-        Legacy Replies
-      </mat-slide-toggle>
-      <span class="option-description">
-        @if (showLegacyReplies()) {
-          Showing oldest replies first
-        } @else {
-          Showing newest replies first
+  <div class="replies-container">
+    <div class="replies-list-container">
+      @if (profileState.replies().length === 0) {
+      <div class="empty-state">
+        <mat-icon>reply_all</mat-icon>
+        <p>No replies to display yet</p>
+      </div>
+      } @else {
+      <div class="replies-list">
+        @for(note of filteredReplies(); track note.id) {
+        <mat-card class="note-card" appearance="outlined">
+          <app-user-profile class="user-profile-thread" view="thread" [pubkey]="profileState.currentProfilePubkey()">
+            <a class="date-link" [routerLink]="['/e', note.id]" [matTooltip]="note.created_at * 1000 | date:'medium'"
+              matTooltipPosition="below">
+              {{ note.created_at | ago }}
+            </a>
+          </app-user-profile>
+          <mat-card-content>{{note.content}}</mat-card-content>
+          <mat-card-footer class="note-footer">
+            <button mat-icon-button>
+              <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
+            </button>
+            <button mat-icon-button class="note-footer-right">
+              <mat-icon [matTooltip]="bookmark.getBookmarkTooltip(note.id)" matTooltipPosition="below"
+                (click)="bookmark.toggleBookmark(note.id)">
+                {{bookmark.getBookmarkIcon(note.id)}}
+              </mat-icon>
+            </button>
+          </mat-card-footer>
+        </mat-card>
         }
-      </span>
+      </div>
+      }
+    </div>
+    
+    <div class="options-section">
+      <h3 class="options-title">Display Options</h3>
+      <div class="option-controls">
+        <mat-slide-toggle 
+          [checked]="showLegacyReplies()" 
+          (change)="toggleLegacyReplies()"
+          color="primary">
+          Legacy Replies
+        </mat-slide-toggle>
+        <span class="option-description">
+          Show legacy replies means comments made by Nostr clients that do not support the new reply format.
+          <!-- @if (showLegacyReplies()) {
+            Showing oldest replies first
+          } @else {
+            Showing newest replies first
+          } -->
+        </span>
+      </div>
     </div>
   </div>
-
-  @if (profileState.replies().length === 0) {
-  <div class="empty-state">
-    <mat-icon>reply_all</mat-icon>
-    <p>No replies to display yet</p>
-  </div>
-  } @else {
-  <div class="replies-list">
-    @for(note of filteredReplies(); track note.id) {
-    <mat-card class="note-card" appearance="outlined">
-      <app-user-profile class="user-profile-thread" view="thread" [pubkey]="profileState.currentProfilePubkey()">
-        <a class="date-link" [routerLink]="['/e', note.id]" [matTooltip]="note.created_at * 1000 | date:'medium'"
-          matTooltipPosition="below">
-          {{ note.created_at | ago }}
-        </a>
-      </app-user-profile>
-      <mat-card-content>{{note.content}}</mat-card-content>
-      <mat-card-footer class="note-footer">
-        <button mat-icon-button>
-          <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
-        </button>
-        <button mat-icon-button class="note-footer-right">
-          <mat-icon [matTooltip]="bookmark.getBookmarkTooltip(note.id)" matTooltipPosition="below"
-            (click)="bookmark.toggleBookmark(note.id)">
-            {{bookmark.getBookmarkIcon(note.id)}}
-          </mat-icon>
-        </button>
-      </mat-card-footer>
-    </mat-card>
-    }
-  </div>
-  }
 </div>
