feat: add relays section to profile with routing and UI components

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -52,6 +52,10 @@
             <a class="following-count" [routerLink]="'following'" [queryParamsHandling]="'preserve'">
                 Following {{ profileState.followingList().length }}
             </a>
+
+            <a class="following-count" [routerLink]="'relays'" [queryParamsHandling]="'preserve'">
+                Relays {{ profileState.relay?.relayUrls?.length }}
+            </a>
             }
 
             <mat-menu #profileMenu="matMenu">
